Added team stats backend
