# app/ErtsWebApp/swagger.json
@@ -79,6 +79,43 @@
         }
       }
     },
+    "/api/Team/GetTeam/{teamId}": {
+      "get": {
+        "tags": [
+          "Team"
+        ],
+        "operationId": "Team_GetTeam",
+        "parameters": [
+          {
+            "name": "teamId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "nullable": true,
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/TeamDto"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Game/GetLolGameStats/{gameId}": {
       "get": {
         "tags": [
@@ -399,6 +436,170 @@
             "format": "int32"
           },
           "imageUrl": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "TeamDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "gameType": {
+            "$ref": "#/components/schemas/GameType"
+          },
+          "imageUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "acronym": {
+            "type": "string",
+            "nullable": true
+          },
+          "players": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/Player"
+            }
+          },
+          "lastMatches": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/TeamPastMatchDto"
+            }
+          },
+          "upcomingMatches": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/TeamUpcomingMatchDto"
+            }
+          }
+        }
+      },
+      "GameType": {
+        "type": "string",
+        "description": "",
+        "x-enumNames": [
+          "lol",
+          "csgo",
+          "r6"
+        ],
+        "enum": [
+          "lol",
+          "csgo",
+          "r6"
+        ]
+      },
+      "Player": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
+          },
+          "nick": {
+            "type": "string",
+            "nullable": true
+          },
+          "nationality": {
+            "type": "string",
+            "nullable": true
+          },
+          "apiId": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "TeamPastMatchDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "matchId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "team1ImageUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "team2ImageUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "team1Name": {
+            "type": "string",
+            "nullable": true
+          },
+          "team2Name": {
+            "type": "string",
+            "nullable": true
+          },
+          "team1GamesWon": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "team2GamesWon": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "startTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "leagueImageUrl": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "TeamUpcomingMatchDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "matchId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "team1ImageUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "team2ImageUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "team1Name": {
+            "type": "string",
+            "nullable": true
+          },
+          "team2Name": {
+            "type": "string",
+            "nullable": true
+          },
+          "startTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "leagueImageUrl": {
             "type": "string",
             "nullable": true
           }
